# katto

./: .gitignore  FIX_SUMMARY.md  README.md  SETUP.md  chat_tui.py  client.py  crash.txt  pyproject.toml  server.py  test_integration.py  test_server.py
client/: app.py  chat_ui.tcss  test_api.py  ui_assets.py
server/: Dockerfile  README.md  database.py  local_db.py  main.py  requirements.txt  test_ws.py
